<resources>
    <string name="app_name">QueueSystem</string>
    <string name="add_service">Add Service</string>
    <string name="enter_service_name">Enter Service name</string>
    <string name="enter_service_name_in_arabic">Enter service name in arabic</string>
    <string name="enter_token_start">Enter token start</string>
    <string name="enter_token_end">Enter token end</string>
    <string name="confirm">Confirm</string>
    <string name="enter_service_id">Enter service id</string>
    <string name="add_counter">Add Counter</string>
    <string name="enter_counter_id">Enter counter id</string>
    <string name="enter_counter_name">Enter counter name</string>
    <string name="enter_counter_name_in_arabic">Enter counter name in arabic</string>
    <string name="counter_list">Counter List</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="are_you_sure_you_want_to_delete_this_counter">Are you sure you want to delete this counter</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_delete_this_service">Are you sure you want to delete this service</string>
    <string name="user_list">User List</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="add_user_data">Add User Data</string>
    <string name="enter_user_id">Enter User Id</string>
    <string name="users">Users</string>
    <string name="reset_queue">Reset Queue</string>
    <string name="home">Home</string>
    <string name="reset">Reset</string>
    <string name="reset_now">Reset Now</string>
    <string name="set_reset_time">Set Reset Time</string>
    <string name="select_reset_time">Select Reset Time</string>
    <string name="are_you_sure_you_want_to_reset_queue_now">Are You sure you want to reset queue now ??</string>
    <string name="queue_reset_successfully">Queue reset successfully</string>
    <string name="voice_configuration">Voice Configuration</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="arabic_first_english_first">Arabic First English Second</string>
    <string name="english_first_arabic_first">English First Arabic Second</string>
    <string name="enter_custom_message">Enter Custom Message</string>
    <string name="enter_english_message">Enter English Message</string>
    <string name="enter_arabic_message">Enter Arabic Message</string>
    <string name="male_voice">Male Voice</string>
    <string name="token">Token</string>
    <string name="counter">Counter</string>
    <string name="ftdi_console">Hard Keypad</string>
</resources>